syntax="proto3";

service FileTransferService {
  rpc getFolderInfo(FolderInfo) returns (Res) {}
  rpc getFileInfo(FileInfo) returns (Res) {}
  rpc transferFile(stream FileData) returns (Res) {}
}

message FolderInfo {
  string name = 1;
}

message FileInfo {
  string name = 1;
  uint32 mode = 2;
}

message FileData {
  bytes data = 1;
}

message Res {
  string message = 1;
}